platform/manifests/remote/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    environment: local

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-service
  namespace: service
  labels:
    app: interview-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: interview-service
  template:
    metadata:
      labels:
        app: interview-service
    spec:
      containers:
        - image: "registry.loosh.cloud/interview-svc"
          name: interview-service
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "1"
              memory: "512Mi"
            limits:
              memory: "2Gi"
