platform/manifests/remote/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: interview-service
  namespace: service
spec:
  selector:
    app: interview-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-service
  namespace: service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: interview.itscoming.run
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: traefik
  rules:
    - host: interview.itscoming.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interview-service
                port:
                  number: 80
